--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,10 @@ jobs:
   ingest:
     runs-on: ubuntu-latest
     steps:
-      - uses: 
-          conda-incubator/setup-miniconda@v2.1.1
-         with:
-            miniconda-version: 'latest'
-            channels: conda-forge
-            environment-file: environment.yml
-      - run: python ingest.py
+      - name: Ingest data
+        uses: conda-incubator/setup-miniconda@v2.1.1
+        with:
+          miniconda-version: 'latest'
+          channels: conda-forge
+          environment-file: environment.yml
+        run: python ingest.py
