--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,11 @@ jobs:
   ingest:
     runs-on: ubuntu-latest
     steps:
-      - name: Ingest data
+      - name: Create env
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
           miniconda-version: 'latest'
           channels: conda-forge
           environment-file: environment.yml
+      - name: Ingest Data
         run: python ingest.py
