--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ jobs:
   ingest:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Create env
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
