use bash login shell

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,5 @@ jobs:
           channels: conda-forge
           environment-file: environment.yml
       - name: Ingest Data
+        shell: bash -l {0}
         run: python ingest.py
