--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,5 @@ jobs:
       - name: Ingest Data
         shell: bash -l {0}
         run: python ingest.py
+      - name: Commit files
+        id: commit
