--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,5 @@ jobs:
       - name: Ingest Data
         shell: bash -l {0}
         run: python ingest.py
+      - name: AWS upload
+        run: python aws_upload.py --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
