add compute step - consolidate AWS - multiple envs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,15 +5,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create env
+      - name: Create ingestion environment
         uses: conda-incubator/setup-miniconda@v2.1.1
         with:
           miniconda-version: 'latest'
           channels: conda-forge
-          environment-file: environment.yml
+          environment-file: environment_ingest.yml
       - name: Ingest Data
         shell: bash -l {0}
         run: python ingest.py
-      - name: AWS upload
+      - name: Upload to AWS
         shell: bash -l {0}
-        run: python aws_upload.py --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+        run: python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+  compute:
+  needs: [ingest]
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v2
+    - name: Create compute environment
+        uses: conda-incubator/setup-miniconda@v2.1.1
+        with:
+          miniconda-version: 'latest'
+          channels: conda-forge
+          environment-file: environment_compute.yml
+    - name Download From AWS
+        shell: bash -l {0}
+        run: python aws.py download --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+    - name: Run Computation
+        shell: bash -l {0}
+        run: python compute.py
+    - name: Upload to AWS
+        shell: bash -l {0}
+        run: python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df_mod.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
