--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,22 +18,22 @@ jobs:
         shell: bash -l {0}
         run: python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
   compute:
-  needs: [ingest]
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-    - name: Create compute environment
-      uses: conda-incubator/setup-miniconda@v2.1.1
-      with:
-        miniconda-version: 'latest'
-        channels: conda-forge
-        environment-file: environment_compute.yml
-    - name: Download From AWS
-      shell: bash -l {0}
-      run: python aws.py download --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
-    - name: Run Computation
-      shell: bash -l {0}
-      run: python compute.py
-    - name: Upload to AWS
-      shell: bash -l {0}
-      run: python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df_mod.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+    needs: ingest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Create compute environment
+        uses: conda-incubator/setup-miniconda@v2.1.1
+        with:
+          miniconda-version: 'latest'
+          channels: conda-forge
+          environment-file: environment_compute.yml
+      - name: Download From AWS
+        shell: bash -l {0}
+        run: python aws.py download --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+      - name: Run Computation
+        shell: bash -l {0}
+        run: python compute.py
+      - name: Upload to AWS
+        shell: bash -l {0}
+        run: python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df_mod.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
