--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,8 @@ jobs:
           environment-file: environment_ingest.yml
       - name: Ingest Data
         shell: bash -l {0}
-        run: python ingest.py
-      - name: Upload to AWS
-        shell: bash -l {0}
         run: |
-        python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+          python ingest.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
   compute:
     needs: ingest
     runs-on: ubuntu-latest
@@ -29,18 +26,10 @@ jobs:
           miniconda-version: 'latest'
           channels: conda-forge
           environment-file: environment_compute.yml
-      - name: Download From AWS
-        shell: bash -l {0}
-        run: |
-        python aws.py download --bucket ${{ secrets.AWS_BUCKET }} --key df.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
       - name: Run Computation
         shell: bash -l {0}
         run: |
-        python compute.py
-      - name: Upload to AWS
-        shell: bash -l {0}
-        run: |
-        python aws.py upload --bucket ${{ secrets.AWS_BUCKET }} --key df_mod.csv --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }} --path df.csv
+          python compute.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
   build_docker:
       runs-on: ubuntu-latest
       steps:
@@ -57,18 +46,18 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/testrepo:latest
-  aws_compute:
-    needs: [ingest, compute]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Create ingestion environment
-        uses: conda-incubator/setup-miniconda@v2.1.1
-        with:
-          miniconda-version: 'latest'
-          channels: conda-forge
-          environment-file: environment_ingest.yml
-      - name: Queue Spot job
-        shell: bash -l {0}
-        run: |
-        python aws.py spot --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
+  #aws_compute:
+  #  needs: [ingest, compute]
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - uses: actions/checkout@v2
+  #    - name: Create ingestion environment
+  #      uses: conda-incubator/setup-miniconda@v2.1.1
+  #      with:
+  #        miniconda-version: 'latest'
+  #        channels: conda-forge
+  #        environment-file: environment_ingest.yml
+  #    - name: Queue Spot job
+  #      shell: bash -l {0}
+  #      run: |
+  #        python aws.py spot --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
