--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,7 @@ jobs:
           environment-file: environment_ingest.yml
       - name: Ingest Data
         shell: bash -l {0}
-        run: |
-          python ingest.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
+        run: python ingest.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
   compute:
     needs: ingest
     runs-on: ubuntu-latest
@@ -28,14 +27,12 @@ jobs:
           environment-file: environment_compute.yml
       - name: Run Computation
         shell: bash -l {0}
-        run: |
-          python compute.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
+        run: python compute.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
   build_docker:
       runs-on: ubuntu-latest
       steps:
       - name: Set up Docker Buildx
       - uses: docker/setup-buildx-action@v2
-        
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
