--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
-      name: RIngest
+      - name: RIngest
         run: rjob.R ${{ secrets.AWS_ACCESS }} ${{ secrets.AWS_SECRET }} ${{ secrets.AWS_BUCKET }}
         shell: Rscript {0}
   ingest:
