--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
       - name: RIngest
-        run: rjob.R ${{ secrets.AWS_ACCESS }} ${{ secrets.AWS_SECRET }} ${{ secrets.AWS_BUCKET }}
-        shell: Rscript {0}
+        run: Rscript rjob.R ${{ secrets.AWS_ACCESS }} ${{ secrets.AWS_SECRET }} ${{ secrets.AWS_BUCKET }}
+        #shell: Rscript {0}
   ingest:
   # runs ingest job on Ubuntu machine
     runs-on: ubuntu-latest
