--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
+        with:
+          needs: Imports
       - name: RIngest
         run: Rscript rjob.R ${{ secrets.AWS_ACCESS }} ${{ secrets.AWS_SECRET }} ${{ secrets.AWS_BUCKET }}
         #shell: Rscript {0}
