--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
-        extra-packages: |
-          any::readr
-          any::aws.s3
+        with:
+          extra-packages: |
+            any::readr
+            any::aws.s3
       - name: RIngest
         run: Rscript rjob.R ${{ secrets.AWS_ACCESS }} ${{ secrets.AWS_SECRET }} ${{ secrets.AWS_BUCKET }}
   ingest:
