--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,23 +47,41 @@ jobs:
       - name: Run Computation
         shell: bash -l {0}
         run: python compute.py --bucket ${{ secrets.AWS_BUCKET }} --access ${{ secrets.AWS_ACCESS }} --secret ${{ secrets.AWS_SECRET }}
-  build_docker:
-      runs-on: ubuntu-latest
-      steps:
-      # logs into DockerHub
-      - uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
+  build_docker_ecr:
+    runs-on: ubuntu-latest
+    steps:
+    # logs into DockerHub
+    - uses: docker/setup-buildx-action@v2
+    - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-      # Builds Docker image from Dockerfile and uploads to DockerHub.
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/testrepo:latest
+          registry: 921974715484.dkr.ecr.us-east-2.amazonaws.com
+          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Build and push
+    # Builds Docker image from Dockerfile and uploads to DockerHub.
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: compute_image_repo:latest
+#  build_docker:
+#      runs-on: ubuntu-latest
+#      steps:
+#      # logs into DockerHub
+#      - uses: docker/setup-buildx-action@v2
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Build and push
+#      # Builds Docker image from Dockerfile and uploads to DockerHub.
+#        uses: docker/build-push-action@v3
+#        with:
+#          push: true
+#          tags: ${{ secrets.DOCKERHUB_USERNAME }}/testrepo:latest
           # testrepo is the name of the repo, and latest is the version of the image
+
  # we're not running this part of our job for now
  # aws_compute:
  #   # needs ingest and build_docker to complete successfully before starting
