--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,11 +53,11 @@ jobs:
     # logs into DockerHub
     - uses: docker/setup-buildx-action@v2
     - name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: 921974715484.dkr.ecr.us-east-2.amazonaws.com
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      uses: docker/login-action@v2
+      with:
+        registry: 921974715484.dkr.ecr.us-east-2.amazonaws.com
+        username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     - name: Build and push
     # Builds Docker image from Dockerfile and uploads to DockerHub.
       uses: docker/build-push-action@v3
@@ -80,7 +80,7 @@ jobs:
 #        with:
 #          push: true
 #          tags: ${{ secrets.DOCKERHUB_USERNAME }}/testrepo:latest
-          # testrepo is the name of the repo, and latest is the version of the image
+#          # testrepo is the name of the repo, and latest is the version of the image
 
  # we're not running this part of our job for now
  # aws_compute:
