--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: compute_image_repo:latest
+        tags: compute_image_repo
 #  build_docker:
 #      runs-on: ubuntu-latest
 #      steps:
